--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,8 @@ body {
   min-width: 320px;
   min-height: 100vh;
   direction: rtl;
+    /* رنگ بکگراند سایت */
+    background-color:#F3F4F6;
 }
 
 
@@ -63,10 +65,10 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
-  a:hover {
-    /* color: #747bff; */
-  }
-  button {
-    /* background-color: #f9f9f9; */
-  }
-}
+  /* a:hover {
+    color: #747bff;
+  } */
+  /* button {
+    background-color: #f9f9f9;
+  }*/
+} 
