--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,9 @@
 @plugin "daisyui";
 
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
+
   /* padding: 2rem; */
   /* text-align: center; */
 }
@@ -35,6 +36,16 @@
   justify-content: center;
 
 }
+/* استایل دکمه ها */
+.buttonStyle{
+ border:1px solid var(--color-first);
+ padding:4px 20px;
+ border-radius: 24px;
+ font-family: 'dirooz';
+ color: var(--color-first);
+ font-size: 16px;
+}
+
 /* .logo {
   height: 6em;
   padding: 1.5em;
