--- a/src/App.css
+++ b/src/App.css
@@ -43,8 +43,24 @@
   padding: 4px 20px;
   border-radius: 24px;
   font-family: "dirooz";
-  color: var(--color-first);
+  /* color: var(--color-first); */
+  color:white;
   font-size: 16px;
+  display: flex;
+  align-items: center;
+}
+.takhfif{
+  font-family: var(--font-dirooz);
+  font-size: 13px;
+  text-decoration: line-through;
+  color:#ACACAC
+
+}
+.gheymat{
+  font-family: var(--font-dirooz);
+  font-size: 18px;
+  /* color:var(--color-first) */
+  color:white
 }
 
 /* .logo {
